Fixed button alignment in IE8.

--- a/censusweb/media/css/census.css
+++ b/censusweb/media/css/census.css
@@ -127,6 +127,7 @@ aside label {
 
 nav {
     margin:20px 0;
+    display: block;
 }
 
 #help-link, #help {
